<resources>
    <string name="app_name">shoppingList</string>
    <string name="settings">settings</string>
    <string name="notes">notes</string>
    <string name="shop_list">shop_list</string>
    <string name="new_item">new_item</string>
    <string name="ed_title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="save">Save</string>
    <string name="bold">Bold</string>
    <string name="color">Color</string>
    <string name="new_list_name">New list name</string>
    <string name="hint_name">name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_list">Create list</string>
    <string name="delete_question">do you want to delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="delete_list">Delete list</string>
    <string name="clear_list">Clear list</string>
    <string name="share_list">Share list</string>
    <string name="empty">Empty</string>
    <string name="update_list_item">Update list item</string>


    <string name="general">General</string>
    <string name="choose_note_style">Choose note style</string>
    <string name="choose_time_format">Choose time format</string>

    <string name="remove_adds">Remove adds</string>
    <string name="remove_adds_summary">Remove all adds in the app</string>

    <string name="theme_settings">Theme settings</string>
    <string name="choose_theme">Choose theme</string>

    <string name="note_text_settings">Note text settings</string>
    <string name="title_text_size">Title text size</string>
    <string name="content_text_size">Content text size</string>
</resources>