<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/note_style_array"
            android:entryValues="@array/note_style_values"
            android:icon="@drawable/ic_baseline_style_24"
            android:key="note_style_key"
            android:title="@string/choose_note_style"
            app:useSimpleSummaryProvider="true"
            app:title="@string/choose_note_style" />
        <ListPreference
            android:defaultValue="hh:mm:ss - yyyy/MM/dd"
            android:entries="@array/time_format_array"
            android:entryValues="@array/time_format_values"
            android:icon="@drawable/ic_time_format"
            android:key="time_format_key"
            android:title="List preference"
            app:title="@string/choose_time_format"

            app:useSimpleSummaryProvider="true" />
        <Preference
            android:title="@string/remove_adds"
            android:summary="@string/remove_adds_summary"
            android:icon="@drawable/ic_bremove_adds"
            />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/theme_settings">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/choose_theme_array"
            android:entryValues="@array/choose_theme_values"
            android:key="choose_theme_key"
            android:title="@string/choose_theme"
            app:useSimpleSummaryProvider="true"

            app:icon="@drawable/ic_theme_style" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/note_text_settings">

        <ListPreference
            android:defaultValue="16"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:icon="@drawable/ic_text_size"
            android:key="title_size_key"
            android:title="@string/title_text_size"

            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="14"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:icon="@drawable/ic_text_size"
            android:key="content_size_key"
            android:title="@string/content_text_size"

            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
</PreferenceScreen>