<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/delete_list"
        android:id="@+id/delete_list"
        android:orderInCategory="1"
        />

    <item
        android:title="@string/clear_list"
        android:id="@+id/clear_list"
        android:orderInCategory="2"
        />

    <item
        android:title="@string/share_list"
        android:id="@+id/share_list"
        android:orderInCategory="3"
        />

    <item
        android:title="new item"
        android:id="@+id/new_item"
        android:icon="@drawable/ic_new_shop_item"
        android:orderInCategory="1"
        app:actionLayout="@layout/edit_action_layout"
        app:showAsAction="ifRoom|collapseActionView"

        />

    <item
        android:title="save item"
        android:id="@+id/save_item"
        android:icon="@drawable/ic_save"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"

        />



</menu>